--- a/winprint/resources/stringtables.rc
+++ b/winprint/resources/stringtables.rc
@@ -176,7 +176,7 @@ BEGIN
 
  60141 "odrzuæ puste strony"
  61141 "Skip empty pages"
- 62141 "Pøeskoèit prázdné stránky"
+ 62141 "Pøeskoèit prázdné str."
 
  60142 "Pomija pierwszy wiersz wydruku (je¿eli pusty)"
  61142 "Skip first line (if empty)"
